--- a/electron/resources/style.css
+++ b/electron/resources/style.css
@@ -33,6 +33,12 @@ h2 {
     cursor: pointer !important;
 }
 
+input:focus, textarea:focus, select:focus{
+    outline: none !important;
+}
+
+/* Main Screen Styling */
+
 #heading {
     margin-top: 30px;
     margin-left: 40px;
@@ -44,15 +50,21 @@ h2 {
     margin-top: -537px;
 }
 
+#bluetooth {
+    position: absolute;
+    margin-left: 675px;
+    margin-top: -537px;
+}
+
 #start {
     position: absolute;
-    margin-left: 625px;
+    margin-left: 575px;
     margin-top: -537px;
 }
 
 #stop {
     position: absolute;
-    margin-left: 675px;
+    margin-left: 625px;
     margin-top: -537px;
 }
 
@@ -73,20 +85,6 @@ h2 {
     position: absolute;
     margin-left: 342px;
     margin-top: -43px;
-}
-
-#dismissWarningModal {
-    margin-top: 25px;
-    margin-left: 305px;
-}
-
-#micDataBtn {
-    margin-top: 10px;
-}
-
-#settingsCancelBtn { 
-    margin-left: 235px;
-    margin-top: 25px;
 }
 
 #ecgChartLabel {
@@ -111,4 +109,112 @@ h2 {
     padding-left: 30px;
     padding-top: 20px;
 
+}
+
+/* Warning Modals */
+
+#dismissWarningModal, #dismissBTWarningModal {
+    margin-top: 25px;
+    margin-left: 305px;
+}
+
+/* Settings Modal */
+
+#micDataBtn {
+    margin-top: 10px;
+}
+
+#settingsCancelBtn { 
+    margin-left: 235px;
+    margin-top: 25px;
+}
+
+/* BT Data Collection Modal */
+
+#btConfigCancelBtn {
+    margin-left: 225px;
+    margin-top: 25px;
+}
+
+#startIcon {
+    margin-left: 10px;
+    margin-right: -10px !important;
+}
+
+#btStatusContainer {
+    margin-left: 200px;
+    width: 400px;
+    height: 50px;
+}
+
+#btStatusBtn {
+    width: 175px;
+}
+
+#btStatusBtn:hover {
+    cursor: default;
+    background-color: #1b1c1d;
+}
+
+#btStatusBtn:focus {
+    cursor: default;
+    background-color: #1b1c1d;
+}
+
+#connectBtn {
+    margin-left: 235px;
+}
+
+/* Labeled Input Definition*/
+
+#ecgFileNameInput, #micFileNameInput {
+    margin-top: 14px;
+    border: 1px solid rgba(255,255,255,.15);
+    width: 275px;
+    border-radius: 4px;
+    background: #1b1c1d;
+    color: rgba(255,255,255,.8);
+    padding: 8px;
+    outline: none !important;
+}
+
+#micFileNameLabel, #ecgFileNameLabel {
+    margin-top: 14px;
+    border: 1px solid rgba(255,255,255,.15);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background: rgba(0,0,0,0.87);
+    color: rgba(255,255,255,.8);
+    outline: none !important;
+}
+
+/* Pulsing indicator*/
+
+.inactive-blob {
+    position: absolute;
+	background: rgba(94, 94, 94, 1);
+	border-radius: 50%;
+	box-shadow: 2 2 2 2 rgba(255, 82, 82, 1);
+    margin-top: 2px;
+    margin-left: -42px;
+	height: 10px;
+	width: 10px;
+	transform: scale(1);
+}
+
+@keyframes custom {
+	0% {
+		transform: scale(0.8);
+		box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.8);
+	}
+	
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+	}
+	
+	100% {
+		transform: scale(0.8);
+		box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+	}
 }
